objects/zkmulti__MCCustom_Address_Source_Package__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Child_Object__c</fullName>
        <label>Child Object</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Country_of_Manufacture_Field__c</fullName>
        <label>Country of Manufacture Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Custom_Address_Source__c</fullName>
        <label>Custom Address Source</label>
        <referenceTo>zkmulti__MCCustom_Address_Source__c</referenceTo>
        <relationshipName>Custom_Address_Source_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkmulti__Description_Field__c</fullName>
        <label>Description Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Harmonized_Code_Field__c</fullName>
        <label>Harmonized Code Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Height_Field__c</fullName>
        <label>Height Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ImageUrl_Field__c</fullName>
        <label>ImageUrl Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Index__c</fullName>
        <label>Index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Is_Customs_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Product Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Length_Field__c</fullName>
        <label>Length Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Packed_Quantity_Field__c</fullName>
        <label>Packed Quantity Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Product_Barcode_Field__c</fullName>
        <label>Product Barcode Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Product_Code_Field__c</fullName>
        <label>Product Code Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Quantity_Field__c</fullName>
        <label>Quantity Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Value_Field__c</fullName>
        <label>Value Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Weight_Field__c</fullName>
        <label>Weight Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Width_Field__c</fullName>
        <label>Width Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Custom Address Source Package</label>
    <nameField>
        <displayFormat>CASP-{000000}</displayFormat>
        <label>Custom Address Source Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Address Source Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>